fix: text italic and oblique helpers

--- a/framework/helpers/_text.scss
+++ b/framework/helpers/_text.scss
@@ -13,7 +13,7 @@
     }
 
     &-italic,
-    &-oblique { font-size: italic; }
+    &-oblique { font-style: italic; }
 
     &-ellipsis { text-overflow: ellipsis; }
 
