--- a/framework/helpers/_display.scss
+++ b/framework/helpers/_display.scss
@@ -1,4 +1,5 @@
-@mixin display() {
+@mixin display()
+{
   .d {
     &-inline-block { display: inline-block; }
     &-inline-flex  { display: inline-flex; }
