--- a/framework/base/mixins/_init.scss
+++ b/framework/base/mixins/_init.scss
@@ -1,5 +1,4 @@
 @mixin init() {
-  @include reset;
   @include root {
     font: normal 10px sans-serif;
     box-sizing: border-box;
@@ -27,10 +26,13 @@
 
   @include responsive;
   @include typography;
-  @include overflow;
-  @include position;
   @include display;
   @include text;
-  @include flex;
+  // Not that usefull
+  //@include overflow;
+  //@include position;
+
+  // Too big to be included by default
+  // @include flex;
   @include reset;
 }
