fix: unclean comment

--- a/example/sass/styles.scss
+++ b/example/sass/styles.scss
@@ -1,4 +1,5 @@
-@use 'sass-repository/framework' as f with (
+//@use 'sass-repository/framework' as f with (
+@use '../../framework' as f with (
   $breakpoints: (
     sm :  576px,
     md :  768px,
@@ -83,9 +84,9 @@
 /// @import 'vendors/all';
 /// ...
 
-body > header {
-  @include f.media-query-highlighter($z-index: 5);
-}
+//body > header {
+  // @include f.media-query-highlighter($z-index: 5);
+//}
 
 /// Todo: move to framework
 .whitespaced {
